# opam

./: .gitattributes  .gitignore  LICENSE  Makefile  Makefile.config.in  Makefile.win-compilers  OCamlMakefile  README.md  configure  configure.ac  opam.install
m4/: ocaml.m4
shell/: bootstrap-ocaml.sh  findwinsdk  opam_completion.lua  opam_switch_eval.cmd
src/: .merlin  Makefile
src/client/: .merlin  opamAction.ml  opamArg.ml  opamClient.ml  opamClient.mli  opamConfigCommand.ml  opamConfigCommand.mli  opamListCommand.ml  opamMain.ml  opamPinCommand.ml  opamRepositoryCommand.ml  opamState.ml  opamSwitchCommand.ml
src/core/: .merlin  opamCompiler.ml  opamCompiler.mli  opamConsole.c  opamConsole.ml  opamConsole.mli  opamCoreConfig.ml.in  opamCoreConfig.mli  opamEnv.c  opamFile.ml  opamFilename.ml  opamFilename.mli  opamFilter.ml  opamGlobals.ml  opamGlobals.mli  opamInject.c  opamMisc.ml  opamMisc.mli  opamPackage.ml  opamParallel.ml  opamProcess.ml  opamRepository.ml  opamScript.mli  opamStd.ml  opamStd.mli  opamSystem.ml  opamSystem.mli  opamTypes.mli  opamTypesBase.ml  opamTypesBase.mli  opamWait.c  opamWindows.c  stubs.c
src/format/: opamTypes.mli  opamTypesBase.ml
src/repositories/: .merlin  opamHTTP.ml  opamLocal.ml  opamVCS.ml
src/repository/: opamDownload.ml  opamLocal.ml
src/solver/: .merlin  opamActionGraph.ml  opamCudf.ml
src/state/: opamAction.ml  opamOCaml.ml  opamScript.mli  opamState.ml  opamState.mli
src/tools/: .merlin  opam-putenv.c  opam_findlib.ml  opam_installer.ml  opam_mk_repo.ml  opam_stats.ml
src_ext/: Makefile  Makefile.packages  Makefile.sources
src_ext/patches/camlp4.pkg/: 0001-Fix-build-process-on-Windows.patch
src_ext/patches/cmdliner.pkg/: 0001-Fix-lack-of-test-for-Config.ext_lib.patch
src_ext/patches/cudf.pkg/: 0001-Correct-DESTDIR-and-install-target-for-Windows.patch
src_ext/patches/dose.pkg/: 0002-Fix-build-process-under-Windows.patch  0003-Fix-compilation-using-Microsoft-C-Compiler.patch
src_ext/patches/findlib.pkg/: 0001-Also-support-mingw64-as-system-type-Matthieu-Dubuget.patch
src_ext/patches/ocaml.pkg/: 0001-Symbolic-link-support-for-Windows.patch
src_ext/patches/ocamlgraph.pkg/: 0001-Rewrote-configuration-script-to-rewrite-directory-se.patch
src_ext/patches/uutf.pkg/: 0001-Fix-lack-of-test-for-Config.ext_lib.patch
